# rayon

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmd.sh  cppan.yml  sw.cpp
CMake/: Build_Boost.cmake  Source_Grouping.cmake
CMake/Modules/: FindBoost.cmake  FindGLM.cmake
Dependencies/json/: CMakeLists.txt  Json-forwards.h  Json.cpp  Json.h
Include/: BoundingBox.hh  CachedValue.hh  Color.hh  Config.hh  CubeMap.hh  EventManager.hh  IntersectionData.hh  KDTree.hh  Material.hh  Object.hh  RawImage.hh  Ray.hh  RayOn.hh  Rayon.hh  Registry.hh  Scene.hh  SceneParse.hh  SolverSecond.hh  Version.hh  Worker.hh
Include/Entities/: Entity.hh  Eye.hh
Include/Entities/Lights/: Ambiant.hh  Light.hh  RTLight.hh  Sun.hh
Include/Entities/Objects/: Box.hh  Mobius.hh  Object.hh  Plane.hh  RTObject.hh  Rectangle.hh  Sphere.hh
Include/Entities/Shapes/: Box.hh  Mobius.hh  Plane.hh  RTShape.hh  Rectangle.hh  Shape.hh  Sphere.hh  Triangle.hh
Include/Helpers/: getNearestInVector.hh
Include/ImageFileHandlers/: IImageFileHandler.hh  ImageFileHandler.hh  ImageFileHandler_BMP.hh  ImageFileHandler_PNG.hh  ImageFileHandler_TGA.hh
Include/Libraries/: stb_image_write.hh
Include/MetaRTLights/: IMetaRTLight.hh  MetaSun.hh
Include/MetaRTObjects/: IMetaRTObject.hh  MetaBox.hh  MetaMobius.hh  MetaPlane.hh  MetaRectangle.hh  MetaSphere.hh
Include/MetaRTShapes/: IMetaRTShape.hh  MetaBox.hh  MetaMobius.hh  MetaPlane.hh  MetaRectangle.hh  MetaSphere.hh  MetaTriangle.hh
Include/Tools/: BoundingBox.hh  CachedValue.hh  Clamp.hh  Color.hh  Globals.hh  Helpers.hh  PI.hh  Pow.hh  Random.hh  RawImage.hh  Ray.hh  SolverSecond.hh  Stat.hh  Types.hh  Vector3.hh
Include/Tools/Angle/: Degree.hh  Radian.hh
Include/Tools/Helpers/: Any.hh  Clamp.hh  Globals.hh  PI.hh  Pow.hh  Types.hh
Projects/Bench/Results/: 01.txt  02.txt  03.txt
Projects/Bench/Source/: main.cpp
Projects/CLI/Include/: CLIOptions.hh
Projects/CLI/Source/: CLIOptions.cpp  main.cpp
Projects/Engine/Include/: BoundingBox.hh  Color.hh  Config.hh  CubeMap.hh  IntersectionData.hh  Material.hh  Object.hh  Ray.hh  Rayon.hh  Registry.hh  Scene.hh  SceneParse.hh  SolverSecond.hh  Version.hh  Worker.hh
Projects/Engine/Include/Batch/: Batch.hh  IBatchGenerator.hh  LocalBatchGenerator.hh
Projects/Engine/Include/Entities/: Entity.hh  Eye.hh
Projects/Engine/Include/Entities/Lights/: RTLight.hh  Sun.hh
Projects/Engine/Include/Helpers/: inVector.hh
Projects/Engine/Include/ImageFileHandlers/: ImageFileHandler_JPG.hh  ImageFileHandler_PNG.hh  ImageFileHandler_TGA.hh
Projects/Engine/Include/Libraries/: stb_image.hh
Projects/Engine/Include/Materials/: Checkerboard.hh  Material.hh  Plain.hh  PlainMaterial.hh  RTMaterial.hh  Texture.hh
Projects/Engine/Include/MetaMaterials/: MetaPlain.hh
Projects/Engine/Include/MetaRTLights/: MetaSun.hh
Projects/Engine/Include/MetaRTMaterials/: IMetaRTMaterial.hh  MetaCheckerboard.hh  MetaPlain.hh  MetaTexture.hh
Projects/Engine/Include/MetaRTShapes/: IMetaRTShape.hh  MetaBox.hh  MetaSphere.hh  MetaTriangle.hh
Projects/Engine/Include/Tools/: CodeMacros.hh  Globals.hh  Helpers.hh  PI.hh  Pow.hh  Random.hh  Stat.hh  Types.hh
Projects/Engine/Source/: CLIOptions.cpp  Color.cpp  Config.cpp  CubeMap.cpp  Material.cpp  Object.cpp  RawImage.cpp  Rayon.cpp  Registry.cpp  Scene.cpp  SceneParse.cpp  SolverSecond.cpp  Version.cpp  Worker.cpp  main.cpp
Projects/Engine/Source/Batch/: Batch.cpp  LocalBatchGenerator.cpp
Projects/Engine/Source/Entities/: Entity.cpp  Eye.cpp
Projects/Engine/Source/Helpers/: inVector.cpp
Projects/Engine/Source/ImageFileHandlers/: ImageFileHandler.cpp  ImageFileHandler_BMP.cpp  ImageFileHandler_JPG.cpp  ImageFileHandler_PNG.cpp  ImageFileHandler_TGA.cpp
Projects/Engine/Source/Materials/: Checkerboard.cpp  Plain.cpp  PlainMaterial.cpp  RTMaterial.cpp  Texture.cpp
Projects/Engine/Source/MetaMaterials/: MetaPlain.cpp
Projects/Engine/Source/MetaRTLights/: MetaSun.cpp
Projects/Engine/Source/MetaRTMaterials/: MetaCheckerboard.cpp  MetaPlain.cpp  MetaTexture.cpp
Projects/Engine/Source/MetaRTShapes/: MetaPlane.cpp  MetaRectangle.cpp  MetaTriangle.cpp
Projects/Engine/Source/Tools/: Random.cpp
Projects/GUI/: GUI.pro
Projects/GUI/Form/: MainWindow.ui  RTColorWidget.ui
Projects/GUI/Include/: MainWindow.hh  RTColorWidget.hh
Projects/GUI/Source/: MainWindow.cpp  RTColorWidget.cpp  main.cpp
Source/: BoundingBox.cpp  Color.cpp  Config.cpp  CubeMap.cpp  EventManager.cpp  KDTree.cpp  Material.cpp  Object.cpp  RawImage.cpp  RayOn.cpp  Rayon.cpp  Registry.cpp  Scene.cpp  SceneParse.cpp  SolverSecond.cpp  TempMain.cpp  Version.cpp  Worker.cpp  main.cpp
Source/Entities/: Entity.cpp  Eye.cpp
Source/Entities/Lights/: Ambiant.cpp  RTLight.cpp  Sun.cpp
Source/Entities/Objects/: Box.cpp  Mobius.cpp  Plane.cpp  RTObject.cpp  Rectangle.cpp  Sphere.cpp
Source/Entities/Shapes/: Box.cpp  Mobius.cpp  Plane.cpp  RTShapes.cpp  Rectangle.cpp  Sphere.cpp  Triangle.cpp
Source/Helpers/: getNearestInVector.cpp
Source/ImageFileHandlers/: ImageFileHandler.cpp  ImageFileHandler_BMP.cpp  ImageFileHandler_PNG.cpp  ImageFileHandler_TGA.cpp
Source/MetaRTLights/: MetaSun.cpp
Source/MetaRTObjects/: MetaBox.cpp  MetaMobius.cpp  MetaPlane.cpp  MetaRectangle.cpp  MetaSphere.cpp
Source/MetaRTShapes/: MetaBox.cpp  MetaMobius.cpp  MetaPlane.cpp  MetaRectangle.cpp  MetaSphere.cpp  MetaTriangle.cpp
Source/Tools/: BoundingBox.cpp  Color.cpp  Random.cpp  RawImage.cpp  Vector3.cpp
Source/Tools/Angle/: Degree.cpp  Radian.cpp
Source/Tools/Helpers/: Globals.cpp
Source/boost/program_options/: cmdline.cpp  config_file.cpp  convert.cpp  options_description.cpp  parsers.cpp  positional_options.cpp  split.cpp  utf8_codecvt_facet.cpp  value_semantic.cpp  variables_map.cpp  winmain.cpp
files/scenes/: above.yon  big.yon  checkerboard.yon  checkeredTexture.yon  cornell.yon  metallic.yon  mobius.yon  planets.yon  sunset.yon  texture.yon  tmp.yon  trisphere.yon
scripts/: generate_version.sh  generator.js  handle_tags.sh  setup_hooks.sh  setup_readme_version.sh
(+16 files in other folders)
