set(JSON_LIBRARY Json PARENT_SCOPE)
set(JSON_HEADER_DIR ${CMAKE_CURRENT_LIST_DIR} PARENT_SCOPE)
set(JSON_LIBRARY Json)

set(JSON_LIBRARY_HEADERS
    ${CMAKE_CURRENT_LIST_DIR}/Json-forwards.h
    ${CMAKE_CURRENT_LIST_DIR}/Json.h
)

set(JSON_LIBRARY_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/Json.cpp
)

add_library(${JSON_LIBRARY} STATIC ${JSON_LIBRARY_SOURCES} ${JSON_LIBRARY_HEADERS})
